<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continue_with_this_shoot"
        android:fontFamily="@font/bold"
        android:gravity="center"
        android:padding="@dimen/dp_10"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:padding="@dimen/dp_10"
            android:gravity="center"
            android:layout_margin="@dimen/dp_10"
            android:background="@drawable/bg_button"
            android:textAllCaps="false"/>
        <TextView
            android:id="@+id/btnOk"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:layout_margin="@dimen/dp_10"
            android:padding="@dimen/dp_10"
            android:gravity="center"
            android:background="@drawable/bg_button"
            android:textAllCaps="false"/>
    </LinearLayout>

</LinearLayout>