<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.OrderActivity"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="@dimen/dp_5"
        android:backgroundTint="@color/white"
        android:theme="@style/ThemeOverlay.AppCompat.Light" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/ivBackPayment"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/back"
                app:tint="@color/black" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/order_now"
                android:fontFamily="@font/bold"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/sp_16"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/back"
                android:visibility="invisible"
                app:tint="@color/black" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        tools:context=".activity.OrderActivity"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".activity.OrderActivity"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@mipmap/pre_progress"
                android:layout_margin="@dimen/dp_10"/>

            <LinearLayout
                android:layout_width="@dimen/dp_200"
                android:layout_height="@dimen/dp_200"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center"
                android:padding="@dimen/dp_10"
                android:background="@drawable/bg_pay"
                android:layout_margin="@dimen/dp_10">
                <TextView
                    android:id="@+id/tvAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="199 /-"
                    android:drawableStart="@mipmap/money"
                    android:fontFamily="@font/medium"
                    android:gravity="center"
                    android:drawablePadding="@dimen/dp_10"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dp_25"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_cost"
                    android:fontFamily="@font/medium"
                    android:gravity="center"
                    android:textColor="@color/light"
                    android:textStyle="bold"
                    android:textSize="@dimen/sp_13"/>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:elevation="@dimen/dp_10"
                app:cardCornerRadius="@dimen/dp_10">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_margin="@dimen/dp_10">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/number_of_skus"
                            android:fontFamily="@font/medium"
                            android:textSize="@dimen/sp_13"/>
                        <TextView
                            android:id="@+id/tvSkuCount"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:fontFamily="@font/medium"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:textSize="@dimen/sp_13"/>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_margin="@dimen/dp_10">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/number_of_channels"
                            android:fontFamily="@font/medium"
                            android:textSize="@dimen/sp_13"/>
                        <TextView
                            android:id="@+id/tvChannelCount"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:fontFamily="@font/medium"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:textSize="@dimen/sp_13"/>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="gone"
                        android:layout_margin="@dimen/dp_10">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/total_images"
                            android:fontFamily="@font/medium"
                            android:textSize="@dimen/sp_13"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:fontFamily="@font/medium"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:textSize="@dimen/sp_13"/>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="gone"
                        android:layout_margin="@dimen/dp_10">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/total_images_edited"
                            android:fontFamily="@font/medium"
                            android:textSize="@dimen/sp_13"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:fontFamily="@font/medium"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:textSize="@dimen/sp_13"/>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="gone"
                        android:layout_margin="@dimen/dp_10">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/available_download"
                            android:fontFamily="@font/medium"
                            android:textSize="@dimen/sp_13"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:fontFamily="@font/medium"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:textSize="@dimen/sp_13"/>

                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:padding="@dimen/dp_10"
            android:gravity="center"
            android:textStyle="bold"
            android:fontFamily="@font/bold"
            android:layout_margin="@dimen/dp_10"
            android:textColor="@color/primary"
            android:background="@drawable/bg_selected"
            android:textAllCaps="false"/>
        <TextView
            android:id="@+id/tvPay"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/pay"
            android:layout_margin="@dimen/dp_10"
            android:padding="@dimen/dp_10"
            android:fontFamily="@font/bold"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/bg_edit_button"
            android:textAllCaps="false"/>
    </LinearLayout>

</LinearLayout>